manifests/networkpolicy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: taskapp-network-policy
  namespace: taskapp
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Allow frontend to talk to backend
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 5000
    # Allow Ingress to talk to frontend and backend
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
      ports:
        - port: 80
        - port: 5000
